force-app/main/default/objects/Milestone__c/fields/ItemsCompleted__c.field-meta.xml
<CustomField>
    <fullName>ItemsCompleted__c</fullName>
    <description>The number of item records related to this milestone that have been completed.</description>
    <inlineHelpText>The number of item records related to this milestone that have been completed.</inlineHelpText>
    <label>Items Completed</label>
    <summaryFilterItems>
        <field>TodoItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>TodoItem__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>