force-app/main/default/objects/Milestone__c/fields/ItemsCount__c.field-meta.xml
<CustomField>
    <fullName>ItemsCount__c</fullName>
    <description>The number of item records related to this milestone</description>
    <inlineHelpText>The number of item records related to this milestone</inlineHelpText>
    <label>Items Count</label>
    <summaryForeignKey>TodoItem__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>